@startuml

skinparam classAttributeIconSize 0
skinparam linetype polyline

class PromotionReportController <<controller>> {
    -promotionReportService : PromotionReportService

    +membershipProgress(@PathVariable Long customerId) : Object
    +membershipLevels(includeInactive : boolean) : Object
}

class PromotionReportService <<service>> {
    -support : DomainSupportService

    +membershipProgress(customerId : Long) : Map<String, Object>
    +membershipLevels(includeInactive : boolean) : List<Map<String, Object>>
}

class DomainSupportService <<service>> {
    -customerMembershipRepository : CustomerMembershipRepository
    -membershipLevelRepository : MembershipLevelRepository

    +getUser(userId : Long) : AppUser
    +userSummary(user : AppUser) : Map<String, Object>
    +membershipLevelSummary(level : MembershipLevel) : Map<String, Object>
    +resolveEligibleMembershipLevel(customer : AppUser, referenceDate : LocalDate) : MembershipLevel
    +membershipQualificationProgress(customer : AppUser, level : MembershipLevel, referenceDate : LocalDate) : int
}

interface CustomerMembershipRepository <<repository>> {
    +findByCustomer_UserId(customerId : Long) : Optional<CustomerMembership>
}

interface MembershipLevelRepository <<repository>> {
    +findAllByOrderByDisplayOrderAsc() : List<MembershipLevel>
}

class CustomerMembership <<entity>> {
    -customerMembershipId : Long
    -customer : AppUser
    -membershipLevel : MembershipLevel
    -completedBookingCount : int
    -progressNote : String
    -effectiveFrom : LocalDate
    -effectiveTo : LocalDate
}

class MembershipLevel <<entity>> {
    -membershipLevelId : Long
    -levelName : String
    -requiredCompletedBookings : int
    -discountPercent : BigDecimal
    -benefitDescription : String
    -displayOrder : int
    -status : CommonStatus
    -qualificationPeriod : String
    -requiredConsecutivePeriods : int
}

class AppUser <<entity>> {
    -userId : Long
    -fullName : String
    -email : String
}

class AuditEntity <<entity>> {
    -createdAt : LocalDateTime
    -updatedAt : LocalDateTime
}

enum CommonStatus {
    + active
    + inactive
}

' Relationships
PromotionReportController ..> PromotionReportService
PromotionReportService ..> DomainSupportService
DomainSupportService ..> CustomerMembershipRepository
DomainSupportService ..> MembershipLevelRepository
DomainSupportService ..> CustomerMembership
DomainSupportService ..> MembershipLevel
DomainSupportService ..> AppUser
CustomerMembershipRepository --> CustomerMembership
MembershipLevelRepository --> MembershipLevel
CustomerMembership --> AppUser
CustomerMembership --> MembershipLevel
CustomerMembership -|> AuditEntity
MembershipLevel -|> AuditEntity
MembershipLevel --> CommonStatus

@enduml
